<resources>
    <string name="app_name">Zomato API</string>
    <string name="api_key">f91abceed9a52a9c6f3a7d38582299a7</string>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="location_updated_message">Location updated</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="ice_cream_shakes">Ice Cream, Shakes</string>
    <string name="votes">Votes</string>
    <string name="_100">100</string>
    <string name="per_person">Per Person</string>
    <string name="_25">25</string>
    <string name="reviews">Reviews</string>
    <string name="very_good">\'Very Good\'</string>
</resources>
